[workspace]
members = [
  "actori-codec",
  "actori-connect",
  "actori-ioframe",
  "actori-rt",
  "actori-macros",
  "actori-service",
  "actori-server",
  "actori-testing",
  "actori-threadpool",
  "actori-tls",
  "actori-tracing",
  "actori-utils",
  "router",
  "string",
]

[patch.crates-io]
actori-codec = { path = "actori-codec" }
actori-connect = { path = "actori-connect" }
actori-ioframe = { path = "actori-ioframe" }
actori-rt = { path = "actori-rt" }
actori-macros = { path = "actori-macros" }
actori-server = { path = "actori-server" }
actori-service = { path = "actori-service" }
actori-testing = { path = "actori-testing" }
actori-threadpool = { path = "actori-threadpool" }
actori-tls = { path = "actori-tls" }
actori-tracing = { path = "actori-tracing" }
actori-utils = { path = "actori-utils" }
actori-router = { path = "router" }
bytestring = { path = "string" }
