[package]
name = "actori-connect"
version = "1.0.2"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actori connect - tcp connector service"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actori.t42x.net"
repository = "https://github.com/actori/actori-net.git"
documentation = "https://docs.rs/actori-connect/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
features = ["openssl", "rustls", "uri"]

[lib]
name = "actori_connect"
path = "src/lib.rs"

[features]
default = ["uri"]

# openssl
openssl = ["open-ssl", "tokio-openssl"]

# rustls
rustls = ["rust-tls", "tokio-rustls", "webpki"]

# support http::Uri as connect address
uri = ["http"]

[dependencies]
actori-service = "1.0.3"
actori-codec = "0.2.0"
actori-utils = "1.0.6"
actori-rt = "1.0.0"
derive_more = "0.99.2"
either = "1.5.3"
futures = "0.3.1"
http = { version = "0.2.0", optional = true }
log = "0.4"
trust-dns-proto = "=0.18.0-alpha.2"
trust-dns-resolver = "=0.18.0-alpha.2"

# openssl
open-ssl = { version="0.10", package = "openssl", optional = true }
tokio-openssl = { version = "0.4.0", optional = true }

# rustls
rust-tls = { version = "0.16.0", package = "rustls", optional = true }
tokio-rustls = { version = "0.12.0", optional = true }
webpki = { version = "0.21", optional = true }

[dev-dependencies]
bytes = "0.5.3"
actori-testing = { version="1.0.0" }
