[package]
name = "actori-ioframe"
version = "0.5.0"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actori framed service"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actori.t42x.net"
repository = "https://gitlab.com/actori/actori-net.git"
documentation = "https://docs.rs/actori-ioframe/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actori_ioframe"
path = "src/lib.rs"

[dependencies]
actori-service = "1.0.1"
actori-codec = "0.2.0"
actori-utils = "1.0.4"
actori-rt = "1.0.0"
bytes = "0.5.3"
either = "1.5.3"
futures = "0.3.1"
pin-project = "0.4.6"
log = "0.4"

[dev-dependencies]
actori-connect = "1.0.0"
actori-testing = "1.0.0"
