[package]
name = "actori-macros"
version = "0.1.1"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actori runtime macros"
repository = "https://github.com/actori/actori-net"
documentation = "https://docs.rs/actori-macros/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[lib]
proc-macro = true

[dependencies]
quote = "^1"
syn = { version = "^1", features = ["full"] }

[dev-dependencies]
actori-rt = { version = "1.0.0" }
