[package]
name = "actori-rt"
version = "1.0.0"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actori runtime"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actori.t42x.net"
repository = "https://github.com/actori/actori-net.git"
documentation = "https://docs.rs/actori-rt/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actori_rt"
path = "src/lib.rs"

[dependencies]
actori-macros = "0.1.0"
actori-threadpool = "0.3"
futures = "0.3.1"
copyless = "0.1.4"
tokio = { version = "0.2.6", default-features=false, features = ["rt-core", "rt-util", "io-driver", "tcp", "uds", "udp", "time", "signal", "stream"] }
