[package]
name = "actori-server"
version = "1.0.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actori server - General purpose tcp server"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actori.t42x.net"
repository = "https://github.com/actori/actori-net.git"
documentation = "https://docs.rs/actori-server/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"
workspace = ".."

[lib]
name = "actori_server"
path = "src/lib.rs"

[features]
default = []

[dependencies]
actori-service = "1.0.1"
actori-rt = "1.0.0"
actori-codec = "0.2.0"
actori-utils = "1.0.4"

log = "0.4"
num_cpus = "1.11"
mio = "0.6.19"
net2 = "0.2"
futures = "0.3.1"
slab = "0.4"

# unix domain sockets
mio-uds = { version = "0.6.7" }

[dev-dependencies]
bytes = "0.5"
env_logger = "0.7"
actori-testing = "1.0.0"