[package]
name = "actori-testing"
version = "1.0.0"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actori testing utils"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actori.t42x.net"
repository = "https://github.com/actori/actori-net.git"
documentation = "https://docs.rs/actori-testing/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "actori_testing"
path = "src/lib.rs"

[dependencies]
actori-rt = "1.0.0"
actori-macros = "0.1.1"
actori-server = "1.0.1"
actori-service = "1.0.5"

log = "0.4"
net2 = "0.2"
futures = "0.3.1"
