[package]
name = "actori-threadpool"
version = "0.3.1"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actori thread pool for sync code"
keywords = ["actori", "network", "framework", "async", "futures"]
homepage = "https://actori.t42x.net"
repository = "https://gitlab.com/actori/actori-net.git"
documentation = "https://docs.rs/actori-threadpool/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"
workspace = ".."

[lib]
name = "actori_threadpool"
path = "src/lib.rs"

[dependencies]
derive_more = "0.99.2"
futures-channel = "0.3.1"
parking_lot = "0.10"
lazy_static = "1.3"
log = "0.4"
num_cpus = "1.10"
threadpool = "1.7"
