[package]
name = "actori-router"
version = "0.2.4"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
description = "Path router"
keywords = ["actori"]
homepage = "https://actori.t42x.net"
repository = "https://gitlab.com/actori/actori-net.git"
documentation = "https://docs.rs/actori-router/"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actori_router"
path = "src/lib.rs"

[features]
default = ["http"]

[dependencies]
regex = "1.3.1"
serde = "1.0.104"
bytestring = "0.1.2"
log = "0.4.8"
http = { version="0.2.0", optional=true }

[dev-dependencies]
http = "0.2.0"
serde_derive = "1.0"
